[package]
name = "pw_format_core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core formatting functionality for pw_format"

[lib]
path = "../pw_format_core.rs"

[dependencies]
pw_status = { path = "../../../pw_status/rust/pw_status" }
