[package]
name = "pw_tokenizer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Efficient string handling and printf style encoding"

[lib]
path = "./lib.rs"

[dependencies]
pw_tokenizer_core = { path = "../pw_tokenizer_core" }
pw_tokenizer_macro = { path = "../pw_tokenizer_macro" }
pw_bytes = { path = "../../../pw_bytes/rust/pw_bytes" }
pw_format_core = { path = "../../../pw_format/rust/pw_format_core" }
pw_status = { path = "../../../pw_status/rust/pw_status" }
pw_stream = { path = "../../../pw_stream/rust/pw_stream" }
pw_varint = { path = "../../../pw_varint/rust/pw_varint" }

[features]
default = []
std = ["pw_tokenizer_core/std"]
nightly = []